Fixed: Landing alignment issue.

--- a/src/Styling/Landing.css
+++ b/src/Styling/Landing.css
@@ -7,6 +7,7 @@ div#Landing {
 }
 
 div#FeatureColumn {
+    justify-content: center;
     width: 100%;
     height: 40%;
     margin-right: 5%;
@@ -30,6 +31,7 @@ div#Landing h1 {
     }
 
     div#FeatureColumn {
+        justify-content: flex-end;
         min-width: 200px;
         width: 200px;
         max-height: 80%;
